find_package(Eigen3 REQUIRED)
find_package(GTest REQUIRED)
find_package(PythonLibs 2.7)

include_directories(${GTEST_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIRS})

set(EXECUTABLE_OUTPUT_PATH "../bin")

add_executable(test_getInputData test_getInputData.cpp)
add_executable(test_getInputDataVec test_getInputDataVec.cpp)
add_executable(test_simpleEKF test_simpleEKF.cpp)
add_executable(test_readFromFile test_readFromFile.cpp)
add_executable(test_writeToFile test_writeToFile.cpp)
add_executable(test_getVectorValues test_getVectorValues.cpp)
add_executable(test_checkInputs test_checkInputs.cpp)

target_link_libraries(test_getInputData ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_getInputDataVec ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_simpleEKF ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_readFromFile ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_writeToFile ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_getVectorValues ${GTEST_LIBRARIES} pthread)
target_link_libraries(test_checkInputs ${GTEST_LIBRARIES} pthread)

target_include_directories(test_getInputData PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_getInputDataVec PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_simpleEKF PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_readFromFile PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_writeToFile PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_getVectorValues PRIVATE ${PYTHON_INCLUDE_DIRS})
target_include_directories(test_checkInputs PRIVATE ${PYTHON_INCLUDE_DIRS})

target_link_libraries(test_getInputData ${PYTHON_LIBRARIES})
target_link_libraries(test_getInputDataVec ${PYTHON_LIBRARIES})
target_link_libraries(test_simpleEKF ${PYTHON_LIBRARIES})
target_link_libraries(test_readFromFile ${PYTHON_LIBRARIES})
target_link_libraries(test_writeToFile ${PYTHON_LIBRARIES})
target_link_libraries(test_getVectorValues ${PYTHON_LIBRARIES})
target_link_libraries(test_checkInputs ${PYTHON_LIBRARIES})